src/Sdl3Sharp.ImGui/Native/ImGui.cs


    /// <summary>
    /// [window-local] "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetCursorPosY")]
    public static partial void SetCursorPosY(float local_y);

    /// <summary>
    /// [window-local] initial cursor position, in window-local coordinates. Call GetCursorScreenPos() after Begin() to get the absolute coordinates version.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetCursorStartPos")]
    public static partial ImVec2 GetCursorStartPos();

    #endregion

    #region Other layout functions

    /// <summary>
    /// Other layout functions
    /// separator, generally horizontal. inside a menu bar or in horizontal layout mode, this becomes a vertical separator.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_Separator")]
    public static partial void Separator();

    /// <summary>
    /// call between widgets or groups to layout them horizontally. X position given in window coordinates.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SameLineEx")]
    public static partial void SameLineEx(float offset_from_start_x, float spacing);

    /// <summary>
    /// undo a SameLine() or force a new line when in a horizontal-layout context.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_NewLine")]
    public static partial void NewLine();

    /// <summary>
    /// add vertical spacing.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_Spacing")]
    public static partial void Spacing();

    /// <summary>
    /// add a dummy item of given size. unlike InvisibleButton(), Dummy() won't take the mouse click or be navigable into.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_Dummy")]
    public static partial void Dummy(ImVec2 size);

    /// <summary>
    /// move content position toward the right, by indent_w, or style.IndentSpacing if indent_w &lt;= 0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IndentEx")]
    public static partial void IndentEx(float indent_w);

    /// <summary>
    /// move content position back to the left, by indent_w, or style.IndentSpacing if indent_w &lt;= 0
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_UnindentEx")]
    public static partial void UnindentEx(float indent_w);

    /// <summary>
    /// lock horizontal starting position
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginGroup")]
    public static partial void BeginGroup();

    /// <summary>
    /// unlock horizontal starting position + capture the whole group bounding box into one "item" (so you can use IsItemHovered() or layout primitives such as SameLine() on whole group, etc.)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndGroup")]
    public static partial void EndGroup();

    /// <summary>
    /// vertically align upcoming text baseline to FramePadding.y so that it will align properly to regularly framed items (call if you have text on a line before a framed item)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_AlignTextToFramePadding")]
    public static partial void AlignTextToFramePadding();

    /// <summary>
    /// ~ FontSize
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetTextLineHeight")]
    public static partial float GetTextLineHeight();

    /// <summary>
    /// ~ FontSize + style.ItemSpacing.y (distance in pixels between 2 consecutive lines of text)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetTextLineHeightWithSpacing")]
    public static partial float GetTextLineHeightWithSpacing();

    /// <summary>
    /// ~ FontSize + style.FramePadding.y * 2
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetFrameHeight")]
    public static partial float GetFrameHeight();

    /// <summary>
    /// ~ FontSize + style.FramePadding.y * 2 + style.ItemSpacing.y (distance in pixels between 2 consecutive lines of framed widgets)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetFrameHeightWithSpacing")]
    public static partial float GetFrameHeightWithSpacing();

    #endregion

    #region ID stack/scopes

    /// <summary>
    /// ID stack/scopes
    /// Read the FAQ (docs/FAQ.md or http://dearimgui.com/faq) for more details about how ID are handled in dear imgui.
    /// - Those questions are answered and impacted by understanding of the ID stack system:
    /// - "Q: Why is my widget not reacting when I click on it?"
    /// - "Q: How can I have widgets with an empty label?"
    /// - "Q: How can I have multiple widgets with the same label?"
    /// - Short version: ID are hashes of the entire ID stack. If you are creating widgets in a loop you most likely
    /// want to push a unique identifier (e.g. object pointer, loop index) to uniquely differentiate them.
    /// - You can also use the "Label##foobar" syntax within widget label to distinguish them from each others.
    /// - In this header file we use the "label"/"name" terminology to denote a string that will be displayed + used as an ID,
    /// whereas "str_id" denote a string that is only used as an ID and not normally displayed.
    /// push string into the ID stack (will hash string).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushID")]
    public static partial void PushID([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id);

    /// <summary>
    /// push string into the ID stack (will hash string).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushIDStr")]
    public static partial void PushIDStr([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_begin, [MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_end);

    /// <summary>
    /// push pointer into the ID stack (will hash pointer).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushIDPtr")]
    public static partial void PushIDPtr(nint ptr_id);

    /// <summary>
    /// push integer into the ID stack (will hash integer).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushIDInt")]
    public static partial void PushIDInt(int int_id);

    /// <summary>
    /// pop from the ID stack.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopID")]
    public static partial void PopID();

    /// <summary>
    /// calculate unique ID (hash of whole ID stack + given parameter). e.g. if you want to query into ImGuiStorage yourself
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetID")]
    public static partial ImGuiID GetID([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetIDStr")]
    public static partial ImGuiID GetIDStr([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_begin, [MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_end);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetIDPtr")]
    public static partial ImGuiID GetIDPtr(nint ptr_id);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetIDInt")]
    public static partial ImGuiID GetIDInt(int int_id);

    /// <summary>
    /// raw text without formatting. Roughly equivalent to Text("%s", text) but: A) doesn't require null terminated string if 'text_end' is specified, B) it's faster, no memory copy is done, no buffer size limits, recommended for long chunks of text.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TextUnformattedEx")]
    public static partial void TextUnformattedEx([MarshalAs(UnmanagedType.LPUTF8Str)] string text, [MarshalAs(UnmanagedType.LPUTF8Str)] string text_end);

    /// <summary>
    /// currently: formatted text with a horizontal line
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SeparatorText")]
    public static partial void SeparatorText([MarshalAs(UnmanagedType.LPUTF8Str)] string label);

    /// <summary>
    /// button
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ButtonEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ButtonEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size);

    /// <summary>
    /// button with (FramePadding.y == 0) to easily embed within text
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SmallButton")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SmallButton([MarshalAs(UnmanagedType.LPUTF8Str)] string label);

    /// <summary>
    /// flexible button behavior without the visuals, frequently useful to build custom behaviors using the public api (along with IsItemActive, IsItemHovered, etc.)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InvisibleButton")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InvisibleButton([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImVec2 size, ImGuiButtonFlags flags);

    /// <summary>
    /// square button with an arrow shape
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ArrowButton")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ArrowButton([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiDir dir);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_Checkbox")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool Checkbox([MarshalAs(UnmanagedType.LPUTF8Str)] string label, bool* v);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_CheckboxFlagsIntPtr")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool CheckboxFlagsIntPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* flags, int flags_value);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_CheckboxFlagsUintPtr")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool CheckboxFlagsUintPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, uint* flags, uint flags_value);

    /// <summary>
    /// use with e.g. if (RadioButton("one", my_value==1)) { my_value = 1; }
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_RadioButton")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool RadioButton([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.U1)] bool active);

    /// <summary>
    /// shortcut to handle the above pattern when value is an integer
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_RadioButtonIntPtr")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool RadioButtonIntPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* v, int v_button);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ProgressBar")]
    public static partial void ProgressBar(float fraction, ImVec2 size_arg, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay);

    /// <summary>
    /// draw a small circle + keep the cursor on the same line. advance cursor x position by GetTreeNodeToLabelSpacing(), same distance that TreeNode() uses
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_Bullet")]
    public static partial void Bullet();

    /// <summary>
    /// hyperlink text button, return true when clicked
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TextLink")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TextLink([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
